@@ -732,6 +732,7 @@
 #define IDC_START_VP_FILE_DIALOG        493
 #define IDC_BLEND_DISABLE_LIGHTING      494
 #define IDC_ENABLE_LEGACY_NUDGE         495
+#define IDC_BLEND_DISABLE_LIGHTING_FROM_BELOW 496
 #define IDC_JOYLFLIPCOMBO               501
 #define IDC_JOYRFLIPCOMBO               502
 #define IDC_JOYPLUNGERCOMBO             503
