@@ -1783,7 +1783,7 @@ BEGIN
     EDITTEXT        DISPID_ROTRA9,24,184,40,12,ES_AUTOHSCROLL
 END
 
-IDD_PROPPRIMITIVE_VISUALS DIALOGEX 0, 0, 125, 178
+IDD_PROPPRIMITIVE_VISUALS DIALOGEX 0, 0, 125, 195
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
@@ -1804,11 +1804,13 @@ BEGIN
     LTEXT           "Depth Bias",IDC_STATIC,83,110,36,8
     EDITTEXT        IDC_DEPTH_BIAS,82,119,36,12,ES_AUTOHSCROLL
     LTEXT           "Disable Lighting (0..1)",IDC_STATIC,7,150,74,10
-    EDITTEXT        IDC_BLEND_DISABLE_LIGHTING,82,147,36,12,ES_AUTOHSCROLL
-    LTEXT           "Legacy/Sides",IDC_STATIC,7,163,45,8
-    EDITTEXT        101,53,162,20,12,ES_AUTOHSCROLL
-    LTEXT           "Editor",IDC_STATIC,77,163,20,8
-    EDITTEXT        IDC_EDGE_FACTOR_UI,98,162,20,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_BLEND_DISABLE_LIGHTING,82,148,36,12,ES_AUTOHSCROLL
+    LTEXT           "Disable Lig.f. below (0..1)",IDC_STATIC,7,165,74,10
+    EDITTEXT        IDC_BLEND_DISABLE_LIGHTING_FROM_BELOW,82,163,36,12,ES_AUTOHSCROLL
+    LTEXT           "Legacy/Sides",IDC_STATIC,7,179,45,8
+    EDITTEXT        101,53,178,20,12,ES_AUTOHSCROLL
+    LTEXT           "Editor",IDC_STATIC,77,179,20,8
+    EDITTEXT        IDC_EDGE_FACTOR_UI,98,178,20,12,ES_AUTOHSCROLL
 END
 
 IDD_PROPPLUNGER_VISUALS DIALOGEX 0, 0, 125, 291
@@ -2593,7 +2595,7 @@ BEGIN
 
     IDD_PROPPRIMITIVE_VISUALS, DIALOG
     BEGIN
-        BOTTOMMARGIN, 175
+        BOTTOMMARGIN, 192
     END
 
     IDD_PROPPLUNGER_VISUALS, DIALOG
